@@ -18,7 +18,7 @@
    Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.  
 */
 
-/* $Id: ipmi-pef-cmds.h,v 1.5 2004-10-29 22:42:21 itz Exp $ */
+/* $Id: ipmi-pef-cmds.h,v 1.6 2004-10-29 23:49:11 itz Exp $ */
 
 #ifndef _IPMI_PEF_CMDS_H
 #define _IPMI_PEF_CMDS_H
@@ -52,6 +52,7 @@ extern fiid_template_t tmpl_get_pef_conf_param_event_filter_table_rs;
 extern fiid_template_t tmpl_get_pef_conf_param_event_filter_data1_rs;
 extern fiid_template_t tmpl_get_pef_conf_param_num_alert_policies_rs;
 extern fiid_template_t tmpl_get_pef_conf_param_alert_string_keys_rs;
+extern fiid_template_t tmpl_get_pef_conf_param_alert_strings_rs;
 
 enum which_event
   {
@@ -96,6 +97,10 @@ int8_t
 ipmi_kcs_get_pef_alert_string_keys (u_int16_t sms_io_base, fiid_obj_t obj_data_rs,
                                     u_int8_t parameter_type, u_int8_t set_selector,
                                     u_int8_t block_selector);
+int8_t
+ipmi_kcs_get_pef_alert_string (u_int16_t sms_io_base, fiid_obj_t obj_data_rs,
+                               u_int8_t parameter_type, u_int8_t set_selector,
+                               u_int8_t block_selector);
 
 #ifdef __cplusplus
 }
